--- a/home-store-app.html
+++ b/home-store-app.html
@@ -378,12 +378,12 @@
 		<div class="container">
 			<div class="row justify-content-md-center">
 				<div class="col-lg-6 v-center pt-5 pt-md-5 pt-lg-0">
-					<h1 class="home-store-banner-heading1">Welcome to Hom</h1>
-                    <h2 class="home-store-banner-heading2">app for online HomeStore</h2>
+					<h1 class="home-store-banner-heading1 mb-0">Welcome to Hom</h1>
+                    <h2 class="home-store-banner-heading2 mb-0">app for online HomeStore</h2>
 					<p class="home-store-banner-text">An online store for buying our high quality cooking oils at best prices. Notch features that define the world’s best oil delivery app.</p>
                     <p class="home-store-banner-text pt-2">Get your oils as fast as one hour and can be changed with 100% refined vegetable oil with fastest delivery.</p>
 				</div>
-                <div class="col-lg-6 v-center pt-3 pt-md-5 pt-lg-5">
+                <div class="col-lg-6 v-center pt-3 pt-md-5 pt-lg-5 text-center">
                     <img src="images/case-study/home-store-app/home-store-app-banner.png" alt="Home Store Banner" class="img-fluid home-store-banner-img">
                 </div>
 			</div>
@@ -396,9 +396,9 @@
         <div class="container">
             <div class="row">
 				<div class="col-lg-6 v-center">
-                    <h2 class="home-store-about-heading1">The Best Mobile</h2> 
-					<h3 class="home-store-about-heading2">app for online store</h3>
-                    <p class="home-store-about-text">An online store for buying our high quality cooking oils at best prices. Notch features that define the world’s best oil delivery app.</p>
+                    <h2 class="home-store-about-heading1 mb-0">The Best Mobile</h2> 
+					<h3 class="home-store-about-heading2 mb-0">app for online store</h3>
+                    <p class="home-store-about-text1">An online store for buying our high quality cooking oils at best prices. Notch features that define the world’s best oil delivery app.</p>
 					<div class="row pt-3">
                         <div class="col-sm-12 col-md-6">
                             <h5 class="vero-about-subheading">Empowered 1+ million Captains and Captinahs</h5>
@@ -419,9 +419,9 @@
                     <img src="images/case-study/home-store-app/home-store-app-about-2.png" alt="Home Store About Image" class="img-fluid home-store-about-img2">
                 </div>
 				<div class="col-lg-6 v-center">
-                    <h2 class="home-store-about-heading1">The Best Mobile</h2> 
-					<h3 class="home-store-about-heading2">app for online store</h3> 
-                    <p class="home-store-about-text">An online store for buying our high quality cooking oils at best prices. Notch features that define the world’s best oil delivery app.</p>
+                    <h2 class="home-store-about-heading3 mb-0">The Best Mobile</h2> 
+					<h3 class="home-store-about-heading4 mb-0">app for online store</h3> 
+                    <p class="home-store-about-text2">An online store for buying our high quality cooking oils at best prices. Notch features that define the world’s best oil delivery app.</p>
 					<div class="row pt-3">
                         <div class="col-sm-12 col-md-6">
                             <h5 class="vero-about-subheading">Empowered 1+ million Captains and Captinahs</h5>
@@ -439,7 +439,7 @@
 	<!-- End About Section -->
 
     <!-- Start Resarch Section -->
-	<section class="home-store-resarch py-3 py-md-5 py-lg-5">
+	<section class="home-store-resarch py-3 py-md-3 py-lg-4">
 		<div class="container">
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
@@ -447,12 +447,12 @@
 					<p class="home-store-research-text">Our user research was conducted using online surveys and interviews from the targeted population.</p>
 				</div>
 			</div>
-			<div class="row py-3 py-md-5 mt-3 home-store-resarch-bg">
-				<div class="col-12 fadeInRight">
-					<img src="images/case-study/home-store-app/home-store-app-research.png" alt="Home Store Research" class="img-fluid home-store-research-img">
-				</div>
-			</div>
         </div>
+		<div class="row py-3 py-md-5 mt-3 home-store-resarch-bg">
+			<div class="col-12 fadeInRight text-center">
+				<img src="images/case-study/home-store-app/home-store-app-research.png" alt="Home Store Research" class="img-fluid home-store-research-img">
+			</div>
+		</div>
 	</section>
 	<!-- End Resarch Section -->
 
@@ -551,28 +551,29 @@
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-6">
-					<img src="images/case-study/home-store-app/home-store-app-1.png" alt="Home Store App" class="home-store-app1" />
+					<img src="images/case-study/home-store-app/home-store-app-1.png" alt="Home Store App" class="home-store-app-img1" />
 				</div>
                 <div class="col-sm-12 col-md-6">
-					<img src="images/case-study/home-store-app/home-store-app-2.png" alt="Home Store App" class="home-store-app2" />
+					<img src="images/case-study/home-store-app/home-store-app-2.png" alt="Home Store App" class="home-store-app-img2" />
 				</div>
                 <div class="col-sm-12 col-md-6">
-					<img src="images/case-study/home-store-app/home-store-app-3.png" alt="Home Store App" class="home-store-app3" />
+					<img src="images/case-study/home-store-app/home-store-app-3.png" alt="Home Store App" class="home-store-app-img3" />
 				</div>
                 <div class="col-sm-12 col-md-6">
-					<img src="images/case-study/home-store-app/home-store-app-4.png" alt="Home Store App" class="home-store-app4" />
+					<img src="images/case-study/home-store-app/home-store-app-4.png" alt="Home Store App" class="home-store-app-img4" />
 				</div>
                 <div class="col-sm-12 col-md-6">
-					<img src="images/case-study/home-store-app/home-store-app-5.png" alt="Home Store App" class="home-store-app5" />
+					<img src="images/case-study/home-store-app/home-store-app-5.png" alt="Home Store App" class="home-store-app-img5" />
 				</div>
                 <div class="col-sm-12 col-md-6">
-					<img src="images/case-study/home-store-app/home-store-app-6.png" alt="Home Store App" class="home-store-app6" />
+					<img src="images/case-study/home-store-app/home-store-app-6.png" alt="Home Store App" class="home-store-app-img6" />
 				</div>
 				<div class="col-sm-12 col-md-6">
-					<img src="images/case-study/home-store-app/home-store-app-7.png" alt="Home Store App" class="home-store-app7" />
+					<img src="images/case-study/home-store-app/home-store-app-7.png" alt="Home Store App" class="home-store-app-img7" />
 				</div>
+				<div class="col-sm-12 col-md-6"></div>
 				<div class="col-sm-12 text-center">
-					<img src="images/case-study/home-store-app/home-store-app-8.png" alt="Home Store App" class="home-store-app8" />
+					<img src="images/case-study/home-store-app/home-store-app-8.png" alt="Home Store App" class="home-store-app-img8" />
 				</div>
             </div>
         </div>
@@ -587,10 +588,10 @@
 			</div>
 			<div class="row pt-4">
 				<div class="col-sm-12 col-md-6 text-center">
-					<img src="images/case-study/app-store.png" class="img-fluid" alt="home-store App Store">
+					<img src="images/case-study/app-store.png" class="app-store img-fluid" alt="home-store App Store">
 				</div>
 				<div class="col-sm-12 col-md-6 text-center">
-					<img src="images/case-study/play-store.png" class="img-fluid" alt="home-store Play Store">
+					<img src="images/case-study/play-store.png" class="play-store img-fluid" alt="home-store Play Store">
 				</div>
 			</div>
 		</div>
