--- a/home-store-web.html
+++ b/home-store-web.html
@@ -378,7 +378,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-5 v-center pt-5 pt-md-5 pt-lg-0">
-					<h1 class="home-store-web-banner-heading1">WELCOME TO HOMeStore</h1>
+					<h1 class="home-store-web-banner-heading">WELCOME TO HOMeStore</h1>
 					<p class="home-store-web-banner-text">dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
 				</div>
 			</div>
@@ -391,9 +391,9 @@
         <div class="container">
             <div class="row justify-content-center">
 				<div class="col-lg-8 v-center">
-                    <h2 class="home-store-web-about-heading1">About Homestore</h2> 
+                    <h2 class="home-store-web-about-heading">About Homestore</h2> 
                     <p class="home-store-web-about-text">An online store for buying our high quality cooking oils at best prices. Notch features that define the world’s best oil delivery app.</p>
-                    <p class="home-store-web-about-text pt-2">Get your oils as fast as one hour and can be changed with 100% refined vegetable oil with fastest delivery.</p>
+                    <p class="home-store-web-about-text">Get your oils as fast as one hour and can be changed with 100% refined vegetable oil with fastest delivery.</p>
                 </div>
             </div>
         </div>
@@ -406,7 +406,7 @@
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
 					<h2 class="home-store-web-design-heading">Design Process</h2>
-					<p class="home-store-web-research-text">Our user research was conducted using online surveys and interviews from the targeted population.</p>
+					<p class="home-store-web-design-text">Our user research was conducted using online surveys and interviews from the targeted population.</p>
 				</div>
 			</div>
 			<div class="row py-3 py-md-5 mt-3 home-store-web-resarch-bg">
@@ -532,7 +532,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="card home-store-web-problems-card">
+                    <div class="card home-store-web-problems-card problem-card-1">
                         <div class="card-body">
                             <h5 class="card-title">Solution</h5>
                             <p class="card-text">After identifying all of the problems, we attempted to fix them through this website, which is a travel website where people can select a spot with a trustworthy guide without any stress or bother. People can book a vetted and verified guide based on their location, language, and price preferences.</p>
@@ -622,9 +622,9 @@
 	<!-- End Competitive Analysis Section -->
 
 	<!-- Start Site Map Section -->
-	<section class="home-store-web-sitemap py-3 py-md-3 py-lg-4">
+	<section class="home-store-web-sitemap py-3 py-md-3 py-lg-4 mb-3">
         <div class="container">
-            <div class="row justify-content-center pt-3">
+            <div class="row justify-content-center">
 				<div class="col-lg-8">
 					<h2 class="home-store-web-sitemap-heading text-white">Site Map</h2>
                     <p class="home-store-web-sitemap-text text-white">Following that, we devised a set of steps that would guide a user through the programme. It would be divided into three sections: onboarding, main activity, and miscellaneous.</p>
@@ -642,14 +642,14 @@
     <!-- Start Wireframe Section -->
 	<section class="home-store-web-wireframe py-3 py-md-3 py-lg-4">
         <div class="container">
-            <div class="row justify-content-center pt-3">
+            <div class="row justify-content-center">
 				<div class="col-lg-8">
 					<h2 class="home-store-web-wireframe-heading">Wireframe</h2>
                     <p class="home-store-web-wireframe-text">At the structural level, our website is designed. It’s a standard technique for laying out material and functionality on a page while taking user wants and journeys into mind.</p>
 				</div>
 			</div>
         </div>
-        <div class="row justify-content-center pt-3 home-store-web-wireframe-row">
+        <div class="row justify-content-center mt-3 home-store-web-wireframe-row">
             <div class="col-sm-12">
                 <img src="images/case-study/home-store-web/home-store-web-wireframe.png" alt="Home Store Wireframe" class="home-store-web-wireframe-img" />
             </div>
@@ -660,7 +660,7 @@
     <!-- Start Typography Section -->
 	<section class="home-store-web-typography py-3 py-md-3 py-lg-4">
         <div class="container">
-            <div class="row justify-content-center pt-3">
+            <div class="row justify-content-center">
 				<div class="col-lg-8">
 					<h2 class="home-store-web-typography-heading">Color & Typo Style</h2>
 				</div>
@@ -786,7 +786,7 @@
             </div>
             <div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
-					<h2 class="home-store-web-Orders-heading text-white">Orders</h2>
+					<h2 class="home-store-web-orders-heading text-white">Orders</h2>
 				</div>
 			</div>
             <div class="row justify-content-center pt-3">
@@ -796,7 +796,7 @@
             </div>
             <div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
-					<h2 class="home-store-web-banner-heading text-white">Banners</h2>
+					<h2 class="home-store-web-banners-heading text-white">Banners</h2>
 				</div>
 			</div>
             <div class="row justify-content-center pt-3">
