--- a/our-process.html
+++ b/our-process.html
@@ -408,90 +408,105 @@
 					</div>
 				</div>
 			</div>
-			<div class="row my-0 my-md-5">
-                <div class="col-md-4">
-                    <div class="card our-process-card">
-                        <div class="card-body">
-                            <div class="row">
-                                <p class="number">01</p>
-                                <p class="process-title my-auto">Idea Analysis</p>
-                            </div>
-                            <div class="row">
-                                <p class="process-description">We begin your project by discussing the ideas that you’ve recommend for the project. We have a tendency to believe discussing your ideas freely with the team is crucial for a brand new or existing project. Understanding the concept permits our inventive and experienced team to grasp the project thorough. To boot, it permits us to assist contour the complete project until preparation.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card our-process-card">
-                        <div class="card-body">
-                            <div class="row">
-                                <p class="number">02</p>
-                                <p class="process-title my-auto">Wireframing and Architectural Planning</p>
-                            </div>
-                            <div class="row">
-                                <p class="process-description">Our app and web development designer then take over the project for outline. Our team of intimate with professional analysis the necessity of the project. At the same time acting on the drawing permits us to put down the entire design of the project, it would be an application or an internet site.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card our-process-card">
-                        <div class="card-body">
-                            <div class="row">
-                                <p class="number">03</p>
-                                <p class="process-title my-auto">User Interface Design</p>
-                            </div>
-                            <div class="row">
-                                <p class="process-description">After the field coming up with for the project is complete, our team of practiced and creative designers work on the UI/UX of the web site or application. The User Interface is one amongst the foremost very important elements of your app or app project. The User Interface combined with the User expertise will be the choice maker for the success rate of the web or app project.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card our-process-card">
-                        <div class="card-body">
-                            <div class="row">
-                                <p class="number">04</p>
-                                <p class="process-title my-auto">Functional Model Development</p>
-                            </div>
-                            <div class="row">
-                                <p class="process-description">When an exquisite User Interface is prepared for the proper User expertise, our development team starts performing on the ultimate purposeful model. This model can end up to be the inceptive of your project. Once mixing the usability with the User Interface is done, a final purposeful model are tested through the outlined standard assertiveness technique.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card our-process-card">
-                        <div class="card-body">
-                            <div class="row">
-                                <p class="number">05</p>
-                                <p class="process-title my-auto">App Deployment</p>
-                            </div>
-                            <div class="row">
-                                <p class="process-description">Once the entire app is approved and tested thoroughly with no errors, it is set to debut on the relevant app store. The work is not done yet, the app needs maintenance and support based on user feedback to preserve the app’s integrity.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card our-process-card">
-                        <div class="card-body">
-                            <div class="row">
-                                <p class="number">06</p>
-                                <p class="process-title my-auto">Deployment</p>
-                            </div>
-                            <div class="row">
-                                <p class="process-description">When the ultimate practical product with successfully passes the standards of Assurance section, we tend to locate the project and build it live. We also take further steps to make sure that there isn’t any single error or bug once your project is prepared to satisfy your targeted audience. Our team conjointly likes to keep in grips with our valuable client to assist on the means. Now it’s time to hit the Launch button!</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+			<div class="main-timeline mt-5">
+				<!-- start experience section-->
+				<div class="process-timeline">
+					<div class="icon"></div>
+					<div class="date-content">
+						<div class="date-outer">
+							<span class="date">
+								<span class="month">01</span>
+							</span>
+						</div>
+					</div>
+					<div class="timeline-content">
+						<h5 class="title">Idea Analysis</h5>
+						<p class="description">We begin your project by discussing the ideas that you’ve recommend for the project. We have a tendency to believe discussing your ideas freely with the team is crucial for a brand new or existing project. Understanding the concept permits our inventive and experienced team to grasp the project thorough. To boot, it permits us to assist contour the complete project until preparation.</p>
+					</div>
+				</div>
+				<!-- end experience section-->
+				<!-- start experience section-->
+				<div class="process-timeline">
+					<div class="icon"></div>
+					<div class="date-content">
+						<div class="date-outer">
+							<span class="date">
+								<span class="month">02</span>
+							</span>
+						</div>
+					</div>
+					<div class="timeline-content">
+						<h5 class="title">Wireframing and Architectural Planning</h5>
+						<p class="description">Our app and web development designer then take over the project for outline. Our team of intimate with professional analysis the necessity of the project. At the same time acting on the drawing permits us to put down the entire design of the project, it would be an application or an internet site.</p>
+					</div>
+				</div>
+				<!-- end experience section-->
+				<!-- start experience section-->
+				<div class="process-timeline">
+					<div class="icon"></div>
+					<div class="date-content">
+						<div class="date-outer">
+							<span class="date">
+								<span class="month">03</span>
+							</span>
+						</div>
+					</div>
+					<div class="timeline-content">
+						<h5 class="title">User Interface Design</h5>
+						<p class="description">After the field coming up with for the project is complete, our team of practiced and creative designers work on the UI/UX of the web site or application. The User Interface is one amongst the foremost very important elements of your app or app project. The User Interface combined with the User expertise will be the choice maker for the success rate of the web or app project.</p>
+					</div>
+				</div>
+				<!-- end experience section-->
+				<!-- start experience section-->
+				<div class="process-timeline">
+					<div class="icon"></div>
+					<div class="date-content">
+						<div class="date-outer">
+							<span class="date">
+								<span class="month">04</span>
+							</span>
+						</div>
+					</div>
+					<div class="timeline-content">
+						<h5 class="title">Functional Model Development</h5>
+						<p class="description">When an exquisite User Interface is prepared for the proper User expertise, our development team starts performing on the ultimate purposeful model. This model can end up to be the inceptive of your project. Once mixing the usability with the User Interface is done, a final purposeful model are tested through the outlined standard assertiveness technique.</p>
+					</div>
+				</div>
+				<!-- end experience section-->
+				<!-- start experience section-->
+				<div class="process-timeline">
+					<div class="icon"></div>
+					<div class="date-content">
+						<div class="date-outer">
+							<span class="date">
+								<span class="month">05</span>
+							</span>
+						</div>
+					</div>
+					<div class="timeline-content">
+						<h5 class="title">App Deployment</h5>
+						<p class="description">Once the entire app is approved and tested thoroughly with no errors, it is set to debut on the relevant app store. The work is not done yet, the app needs maintenance and support based on user feedback to preserve the app’s integrity.</p>
+					</div>
+				</div>
+				<!-- end experience section-->
+				<!-- start experience section-->
+				<div class="process-timeline">
+					<div class="icon"></div>
+					<div class="date-content">
+						<div class="date-outer">
+							<span class="date">
+								<span class="month">06</span>
+							</span>
+						</div>
+					</div>
+					<div class="timeline-content">
+						<h5 class="title">Deployment</h5>
+						<p class="description">When the ultimate practical product with successfully passes the standards of Assurance section, we tend to locate the project and build it live. We also take further steps to make sure that there isn’t any single error or bug once your project is prepared to satisfy your targeted audience. Our team conjointly likes to keep in grips with our valuable client to assist on the means. Now it’s time to hit the Launch button!</p>
+					</div>
+				</div>
+				<!-- end experience section-->
+			</div>
 			
 		</div>
 	</section>
