--- a/toys-short.html
+++ b/toys-short.html
@@ -393,7 +393,7 @@
                     <h2 class="toys-sort-about-heading">Discover new furniture shop with Augmented Reality</h2> 
                     <p class="toys-sort-about-text">This is an advanced and impressive ride sharing and online shopping application which is best fit for every such activity, with a wide range of features.</p>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 text-center">
                     <img src="images/case-study/toys-sort/toys-sort-discover.png" alt="Toys Sort About Image" class="img-fluid toys-sort-about-img">
                 </div>
                 
