--- a/vero.html
+++ b/vero.html
@@ -397,8 +397,8 @@
                     <img src="images/case-study/vero/vero-about.png" alt="Vero About Image" class="img-fluid vero-about-img">
                 </div>
                 <div class="col-lg-6 v-center">
-                    <h2 class="vero-about-heading">The Best Mobile</h2> 
-                    <h3 class="vero-about-heading">app for online store & Ride Share</h3>
+                    <h2 class="vero-about-heading mb-0">The Best Mobile</h2> 
+                    <h3 class="vero-about-heading mb-0">app for online store & Ride Share</h3>
                     <p class="vero-about-text">This is an advanced and impressive ride sharing and online shopping application which is best fit for every such activity, with a wide range of features.</p>
                     <div class="row pt-3">
                         <div class="col-sm-12 col-md-6">
