new blogs added

--- a/ecommerces-rise-in-the-world-of-metaverse.html
+++ b/ecommerces-rise-in-the-world-of-metaverse.html
@@ -225,8 +225,9 @@
 								<div class="contct-heading">Contact Us</div>
 								<div class="inquiry-card-nn">
 									<ul>
-										<li><a href="tel:+19499810151"><img src="images/flags/us.svg" alt="us office" class="flags-size"> +1 (949) 981-0151</a></li>
-										<li><a href="tel:+923092221103"><img src="images/flags/pk.svg" alt="pak office" class="flags-size"> +92-3092221103</a></li>
+										<li><a href="tel:+13105963004"><img src="images/flags/us.svg" alt="us office" class="flags-size"> +1 (310) 596-3004</a></li>
+										<li><a href="tel:+442081445577"><img src="images/flags/gb.svg" alt="us office" class="flags-size"> +44 20 8144 5577</a></li>
+										<li><a href="tel:+923092221104"><img src="images/flags/pk.svg" alt="pak office" class="flags-size"> +92-309-2221104</a></li>
 										<li><i class="fas fa-envelope"></i><a href="mailto:info@futurealiti.com">info@futurealiti.com</a></li>
 										<li><i class="fas fa-envelope"></i><a href="mailto:info@futurealiti.com">sales@futurealiti.com</a></li>
 									</ul>
@@ -635,7 +636,7 @@
 							</li>
 							<li>
 								<span><i class="fas fa-phone-alt"></i></span>
-								<p>Phone <span> <a href="tel:+10000000000">+1 0000 000 000</a></span></p>
+								<p>Phone <span> <a href="tel:+13105963004">+1 (310) 596-3004</a></span></p>
 							</li>
 							<li>
 								<span><i class="fas fa-map-marker-alt"></i></span>
