--- a/game-development.html
+++ b/game-development.html
@@ -2272,7 +2272,7 @@
                             </li>
                             <li>
                                 <span><i class="fas fa-phone-alt"></i></span>
-                                <p>Phone <span> <a href="tel:+10000000000">+1 0000 000 000</a></span></p>
+                                <p>Phone <span> <a href="tel:+13105963004">+1 (310) 596-3004</a></span></p>
                             </li>
                             <li>
                                 <span><i class="fas fa-map-marker-alt"></i></span>
