--- a/how-does-ar-and-vr-help-you.html
+++ b/how-does-ar-and-vr-help-you.html
@@ -398,7 +398,7 @@
                                     </div>
 									<div class="media-body user-info">
 										<h5>Admin</h5>
-										<p>June 21, 2022</p>
+										<p>June 22, 2022</p>
 									</div>
 								</div>
 							</div>
@@ -411,10 +411,16 @@
 						<img src="images/blog/nft.jpg" alt="NFT" class="img-fluid" />
 					</div>
 					<div class="blog-content mt30">
+
+                        <p><strong><i>Do you want to scale your business upto 10x times using AR & VR technology?</i></strong></p>
+                        <p class="pt-2">If yes, then this article is surely for you because here we’ll explain it to you.</p>
+
                         <h3 class="mt30 mb20">What is AR / VR?</h3>
 						<p>First of all, you need to know the full forms of AR and VR, and then we'll give you a quick intro to both of them. </p>
-						<p class="pt-2">AR (Augmented Reality)</p>
-						<p class="pt-2">VR (Virtual Reality)</p>
+						<ul class="lists">
+                            <li>AR (Augmented Reality)</li>
+                            <li>VR (Virtual Reality)</li>
+                        </ul>
 						<p class="pt-2">Virtual Reality is a technology that completely transforms the world into a virtual world according to people's requirements. In Virtual Reality, you'll experience a completely different world where everything will be virtual but looks like a real thing; on the other hand, AR enhances your experience by staying in the real world with the help of visualization like images, sound and text.</p>
 						
                         <h3 class="mt30 mb20">Difference Between AR and VR</h3>
