--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<ul class="nav-list">
 					   <li> <a href="index.html" class="menu-links">Home</a> </li>
 					   <li class="sbmenu">
-						   <a href="#" class="menu-links">About Us</a>
+						   <a href="about-us.html" class="menu-links">About Us</a>
 							<div class="nx-dropdown">
 								<div class="sub-menu-section">
 									<div class="container">
@@ -162,7 +162,7 @@
 															<li><a href="#">Sport App</a></li>
 														</ul>
 													</li>
-													<li><a href="#">Game Development</a>
+													<!-- <li><a href="#">Game Development</a>
 														<ul class="submenu">
 															<li><a href="#">Game</a></li>
 															<li><a href="#">Game</a></li>
@@ -179,12 +179,11 @@
 															<li><a href="#">Website</a></li>
 															<li><a href="#">Website</a></li>
 														</ul>
-													</li>
-													
+													</li> -->
 												</ul>
 											</div>
-											<div class="sub-menu-column">
-											<ul>
+											<!-- <div class="sub-menu-column">
+												<ul>
 													<li><a href="#">Virtual Reality Development</a>
 														<ul class="submenu">
 															<li><a href="#">Virtual Reality</a></li>
@@ -204,8 +203,8 @@
 														</ul>
 													</li>
 												</ul>
-											</div>
-											<div class="sub-menu-column">
+											</div> -->
+											<!-- <div class="sub-menu-column">
 												<ul>
 													<li><a href="#">Augmented Reality Development</a>
 														<ul class="submenu">
@@ -226,7 +225,7 @@
 														</ul>
 													</li>
 												</ul>
-											</div>
+											</div> -->
 										</div>
 									</div>
 								</div>
