--- a/about-us.html
+++ b/about-us.html
@@ -375,28 +375,21 @@
 	</header>
 	<!--End Header -->
 
-	<!--Breadcrumb Area-->
-	<section class="breadcrumb-area banner-1" data-background="images/banner/9.jpg">
+	<section class="breadcrumb-area banner-2">
 		<div class="text-block">
 			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 v-center">
-						<div class="bread-inner">
-							<div class="bread-menu">
-								<ul>
-									<li><a href="index.html">Home</a></li>
-									<li><a href="#">About Us</a></li>
-								</ul>
-							</div>
-							<div class="bread-title">
-								<h2>About Company</h2> </div>
+				<div class="row justify-content-md-center">
+					<div class="col-lg-8">
+						<div class="hero-heading">
+							<h3 class="wow fadeIn" data-wow-delay="0.2s">We Create websites & brands that are seen and heard. <span>Loud and clear.</span></h3>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!--End Breadcrumb Area-->
+	<!--End Breadcrumb-->
+
 	<!--Start About-->
 	<section class="about">
 		<div class="container-fluid">
